@@ -10,6 +10,7 @@
 
 
 #include "Common/util_color.h"
+#include "Common/variant.h"
 #include "Globals/_sound.h"
 #include "Globals/prefs.h"
 #include "Globals/GameColors.h"
@@ -83,11 +84,31 @@ void Defcon::CPod::Tick(float DeltaTime)
 
 void Defcon::CPod::OnAboutToDie()
 {
-	// Release swarmers.
-
-	for(int32 I = 0; I < SWARMERS_PER_POD; I++)
+	if(DeathStyle != EDeathStyle::IncludeCrew)
 	{
-		GArena->SpawnGameObject(EObjType::SWARMER, GetType(), Position, 0.0f, EObjectCreationFlags::EnemyPart);
+		// Dying normally; release swarmers.
+
+		Daylon::FMetadata Options;
+		Daylon::FMetadata* OptionsPtr = nullptr;
+
+		if(KillerType == EObjType::SMARTBOMB)
+		{
+			// We were destroyed by a smart bomb but releasing swarmers, so tag each swarmer
+			// with a short duration of smart bomb invulnerability. 
+			// todo: this won't work if the player fires a second smartbomb quickly after the first
+			// in an attempt to destroy the swarmers, or just as insurance when he has lots of bombs.
+			// For that, we need to track and include a smartbomb ID.
+
+			Daylon::FVariant Value;
+			Value.Real = SMARTBOMB_LIFESPAN;
+			Options.Map.Add(TEXT("SmartbombInvulnerabilityCountdown"), Value);
+			OptionsPtr = &Options;
+		}
+
+		for(int32 I = 0; I < SWARMERS_PER_POD; I++)
+		{
+			GArena->SpawnGameObject(EObjType::SWARMER, GetType(), Position, 0.0f, EObjectCreationFlags::EnemyPart, OptionsPtr);
+		}
 	}
 }
 
@@ -100,27 +121,61 @@ void Defcon::CPod::Explode(CGameObjectCollection& Debris)
 
 	FExplosionParams Params;
 
-	Params.NumParticles    = (int32)FRANDRANGE(30, 60);
-	Params.MaxParticleSize = FRANDRANGE(3, 8) * 1.5f;
-	Params.MinSpeed        =  90;
-	Params.MaxSpeed        = 270;
-	Params.bFade           = (FRAND >= 0.25f);
-	Params.bCold           = true;
-	Params.YoungColor[0]   = 
-	Params.YoungColor[1]   = 
-	Params.OldColor[0]     = 
-	Params.OldColor[1]     = EColor::Purple;
-
-	AddExplosionDebris(Params, Debris);
-
-	if(FRAND <= DEBRIS_DUAL_PROB)
+	if(DeathStyle == EDeathStyle::Normal)
 	{
-		Params.NumParticles    = (int32)FRANDRANGE(20, 40);
-		Params.MaxParticleSize = FRANDRANGE(8, 12);
-		Params.MinSpeed        = 22;
-		Params.MaxSpeed        = 67;
+		Params.NumParticles    = (int32)FRANDRANGE(30, 60);
+		Params.MaxParticleSize = FRANDRANGE(3, 8) * 1.5f;
+		Params.MinSpeed        =  90;
+		Params.MaxSpeed        = 270;
 		Params.bFade           = (FRAND >= 0.25f);
+		Params.bCold           = true;
+		Params.YoungColor[0]   = 
+		Params.YoungColor[1]   = 
+		Params.OldColor[0]     = 
+		Params.OldColor[1]     = EColor::Purple;
 
 		AddExplosionDebris(Params, Debris);
+
+		if(FRAND <= DEBRIS_DUAL_PROB)
+		{
+			Params.NumParticles    = (int32)FRANDRANGE(20, 40);
+			Params.MaxParticleSize = FRANDRANGE(8, 12);
+			Params.MinSpeed        = 22;
+			Params.MaxSpeed        = 67;
+			Params.bFade           = (FRAND >= 0.25f);
+
+			AddExplosionDebris(Params, Debris);
+		}
+	}
+	else
+	{
+		// "Fat" explosion because we are taking our swarmers out with us.
+
+		Params.NumParticles    = (int32)FRANDRANGE(90, 120);
+		Params.MaxParticleSize = FRANDRANGE(6, 16) * 1.5f;
+		Params.MinSpeed        =  90;
+		Params.MaxSpeed        = 270;
+		Params.bFade           = (FRAND >= 0.25f);
+		Params.bCold           = true;
+		Params.YoungColor[0]   = 
+		Params.YoungColor[1]   = 
+		Params.OldColor[0]     = 
+		Params.OldColor[1]     = EColor::Purple;
+
+		AddExplosionDebris(Params, Debris);
+
+		if(FRAND <= DEBRIS_DUAL_PROB)
+		{
+			Params.NumParticles    = (int32)FRANDRANGE(40, 80);
+			Params.MaxParticleSize = FRANDRANGE(8, 16);
+			Params.MinSpeed        = 22;
+			Params.MaxSpeed        = 67;
+			Params.bFade           = (FRAND >= 0.25f);
+
+			AddExplosionDebris(Params, Debris);
+		}
+
+		// Include points for swarmers.
+		GGameMatch->AdvanceScore(SWARMER_VALUE * SWARMERS_PER_POD);
 	}
 }
