@@ -11,6 +11,7 @@
 #include "Globals/prefs.h"
 #include "Globals/GameObjectResources.h"
 #include "Arenas/DefconPlayViewBase.h"
+#include "GameObjects/Enemies/pod.h"
 #include "DefconGameInstance.h"
 
 #include "Runtime/Engine/Classes/Materials/MaterialInstanceDynamic.h"
@@ -24,7 +25,6 @@
 
 
 
-
 Defcon::CSmartbombShockwave::CSmartbombShockwave()
 {
 	ParentType = Type;
@@ -33,16 +33,16 @@ Defcon::CSmartbombShockwave::CSmartbombShockwave()
 	NameColor = TEXT("Color");
 	NameOs    = TEXT("Os");
 
-	MID = Cast<UMaterialInstanceDynamic>(GGameObjectResources.SmartbombBrushPtr->GetResourceObject());
+	MID = Cast<UMaterialInstanceDynamic>(GGameObjectResources.SmartbombShockwaveBrushPtr->GetResourceObject());
 
 	if(MID == nullptr)
 	{
-		auto ParentMaterial = Cast<UMaterialInterface>(GGameObjectResources.SmartbombBrushPtr->GetResourceObject());
+		auto ParentMaterial = Cast<UMaterialInterface>(GGameObjectResources.SmartbombShockwaveBrushPtr->GetResourceObject());
 
 		if(ParentMaterial != nullptr)
 		{
 			MID = UMaterialInstanceDynamic::Create(ParentMaterial, nullptr);
-			GGameObjectResources.SmartbombBrushPtr->SetResourceObject(MID);
+			GGameObjectResources.SmartbombShockwaveBrushPtr->SetResourceObject(MID);
 
 			const FVector4 Color(1.0f, 1.0f, 1.0f, 1.0f);
 			MID->SetVectorParameterValue(NameColor, Color);
@@ -52,20 +52,86 @@ Defcon::CSmartbombShockwave::CSmartbombShockwave()
 			MID = nullptr;
 		}
 	}
+
+	// todo: if pod intersection active (mission has pod intersection object, or all the pods are still intact)
+	// then predetermine if they will all be destroyed by the shockwave. 
+	// If so, have them blow up in extra colorful fashion and release no swarmers.
+	// Otherwise, blow them up normal and release swarmers (but the swarmers should be immune to us).
+	// A "smartbomb ID" would be the safest route.
+
 }
 
 
-CFPoint Defcon::CSmartbombShockwave::GetBlastRadius() const
+void Defcon::CSmartbombShockwave::InitSmartbombShockwave
+(
+	const CFPoint&         InRange, 
+	const I2DCoordMapper*  InMapper,
+	CGameObjectCollection* InTargets, 
+	CGameObjectCollection* InDebris
+)
 {
-	// If we scale the Range (which is a diameter) by 0.5 to get the blast radius,
-	// it's technically correct but feels underpowered i.e. there'll be 
-	// visible enemies that don't blow up because the player ship is 
-	// usually moving fast and brings new enemies into view while the 
-	// shockwave is receding behind and not reaching them. So we fudge 
-	// using a preference where 0.5f is technically correct but higher 
-	// values can feel better.
+	check(InTargets != nullptr && InDebris != nullptr);
 
-	return Range * SMARTBOMB_RADIUS_FACTOR;
+	// Install mapper explicitly because this game object class isn't instantiated normally.
+	MapperPtr = const_cast<I2DCoordMapper*>(InMapper);
+
+	Range   = InRange * SMARTBOMB_RADIUS_FACTOR;
+	Targets = InTargets;
+	Debris  = InDebris;
+
+	if(!GGameMatch->GetMission()->IsMilitary())
+	{
+		return;
+	}
+
+
+	// Compute stuff for possible pod intersection.
+
+	const auto Mission = static_cast<CMilitaryMission*>(GGameMatch->GetMission());
+
+	const int32 NumActivePods = Targets->CountOf(EObjType::POD);
+
+	if(NumActivePods != Mission->StartingPodCount())
+	{
+		return;
+	}
+
+	// Iterate the pods and see if the shockwave can reach them all.
+
+	DestroyingPodIntersection = true;
+
+	int32 NumPodsDestroyable = 0;
+	int32 NumPodsCounted     = 0;
+
+	CFPoint ScreenPos;
+	MapperPtr->To(Position, ScreenPos);
+
+	Targets->ForEachUntil([&ScreenPos, &NumActivePods, &NumPodsCounted, &NumPodsDestroyable, this](IGameObject* Obj)
+	{
+		if(Obj->GetType() != EObjType::POD)
+		{
+			return true;
+		}
+
+		CFPoint PodScreenPos;
+		MapperPtr->To(Obj->Position, PodScreenPos);
+
+		const auto PodInertiaX = Obj->Inertia.x;
+
+		// Don't use the sine wave nature of the pod's inertia.
+		// todo: not perfectly accurate.
+		const auto PodFuturePositionX = PodScreenPos + (CFPoint(Obj->Inertia.x, 0.0f) * SMARTBOMB_LIFESPAN);
+
+		if(ScreenPos.Distance(PodFuturePositionX) > Range.x)
+		{
+			DestroyingPodIntersection = false;
+			return false;
+		}
+
+		NumPodsCounted++;
+
+		return (NumPodsCounted != NumActivePods);
+	});
 }
 
 
@@ -82,11 +148,11 @@ void Defcon::CSmartbombShockwave::Tick(float DeltaTime)
 	Age += DeltaTime;
 
 	const auto T         = FMath::Min(1.0f, Age / SMARTBOMB_LIFESPAN);
-	const auto Radius    = GetBlastRadius() * T;
+	const auto Radius    = Range * T;
 	const auto Shockwave = Radius.x;
 
-	CFPoint P, BombPos;
-	MapperPtr->To(Position, BombPos);
+	CFPoint TargetScreenPos, BombScreenPos;
+	MapperPtr->To(Position, BombScreenPos);
 
 	// Destroy objects within shockwave.
 
@@ -94,12 +160,21 @@ void Defcon::CSmartbombShockwave::Tick(float DeltaTime)
 	{
 		if(Target->CanBeInjuredBySmartbomb() && Target->CanBeInjured())
 		{
-			MapperPtr->To(Target->Position, P);
+			MapperPtr->To(Target->Position, TargetScreenPos);
 
-			if(P.Distance(BombPos) < Shockwave)
+			if(TargetScreenPos.Distance(BombScreenPos) < Shockwave)
 			{
 				GDefconGameInstance->GetStats().HostilesDestroyedBySmartbomb++;
 
+				if(Target->GetType() == EObjType::POD)
+				{
+					if(DestroyingPodIntersection)
+					{
+						Target->SetDeathStyle(EDeathStyle::IncludeCrew);
+					}
+				}
+
+				Target->SetKillerType(EObjType::SMARTBOMB);
 				GArena->DestroyObject(Target);
 			}
 		}
@@ -111,16 +186,16 @@ void Defcon::CSmartbombShockwave::Tick(float DeltaTime)
 	{
 		//if(pObj->GetType() != EObjType::TEXT) // we have no such objects, and "TEXT" conflicts with UE's TEXT macro anyway
 		{
-			MapperPtr->To(pObj->Position, P);
+			MapperPtr->To(pObj->Position, TargetScreenPos);
 
-			if(P.Distance(BombPos) < Shockwave)
+			if(TargetScreenPos.Distance(BombScreenPos) < Shockwave)
 			{
 				// Make debris pushed by shockwave.
-				P.Sub(BombPos);
-				P.Normalize();
-				P.y *= -1;
-				P.Mul(SMARTBOMB_WAVEPUSH * (1.0f - T) + SMARTBOMB_WAVEPUSHMIN);
-				pObj->Orientation.Fwd += P;
+				TargetScreenPos.Sub(BombScreenPos);
+				TargetScreenPos.Normalize();
+				TargetScreenPos.y *= -1;
+				TargetScreenPos.Mul(SMARTBOMB_WAVEPUSH * (1.0f - T) + SMARTBOMB_WAVEPUSHMIN);
+				pObj->Orientation.Fwd += TargetScreenPos;
 			}
 		}
 	});
@@ -133,21 +208,21 @@ void Defcon::CSmartbombShockwave::Tick(float DeltaTime)
 }
 
 
-void Defcon::CSmartbombShockwave::Draw(FPainter& Painter, const I2DCoordMapper& Mapper)
+void Defcon::CSmartbombShockwave::Draw(FPainter& Painter, const I2DCoordMapper& InMapper)
 {
-	check(GGameObjectResources.SmartbombBrushPtr != nullptr);
+	check(GGameObjectResources.SmartbombShockwaveBrushPtr != nullptr);
 
 	if(MID == nullptr)
 	{
 		return;
 	}
 
-	const auto T = FMath::Min(1.0f, Age / SMARTBOMB_LIFESPAN);
-	const auto Radius = GetBlastRadius() * T;
+	const auto T         = FMath::Min(1.0f, Age / SMARTBOMB_LIFESPAN);
+	const auto Radius    = Range * T;
 	const auto Shockwave = Radius.x;
 
 	CFRect R;
-	Mapper.To(Position, R.LL);
+	InMapper.To(Position, R.LL);
 	const FVector2D P(R.LL.x, R.LL.y);
 	R.UR = R.LL;
 	R.Inflate(CFPoint(Shockwave, Shockwave * 0.5f));
@@ -166,7 +241,7 @@ void Defcon::CSmartbombShockwave::Draw(FPainter& Painter, const I2DCoordMapper& 
 		*Painter.OutDrawElements,
 		Painter.LayerId,
 		Geometry.ToPaintGeometry(),
-		GGameObjectResources.SmartbombBrushPtr,
+		GGameObjectResources.SmartbombShockwaveBrushPtr,
 		ESlateDrawEffect::None,
 		C_WHITE /* * Painter.RenderOpacity * Painter.InWidgetStyle->GetColorAndOpacityTint().A */);
 }
